# McpKit

./: .gitmodules  ADR.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  PLAN.md  PRD.md  README.md  SECURITY.md  Taskfile.yml  pyproject.toml  registry.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  secrets-scan.yml
docs/: PLAN.md  PRD.md  SPEC.md
docs/adr/: ADR-001-mcp-transport.md  ADR-002-tool-registry.md  ADR-003-sdk-generation.md  ADRS.md
docs/sota/: SOTA.md
go/: go.work
rust/: Cargo.toml
rust/phenotype-mcp-asset/: Cargo.toml
rust/phenotype-mcp-asset/src/: handler.rs
rust/phenotype-mcp-core/: Cargo.toml
rust/phenotype-mcp-core/src/: client.rs  handlers.rs  lib.rs  tools.rs
rust/phenotype-mcp-framework/: Cargo.toml
rust/phenotype-mcp-framework/src/: transport.rs  types.rs
rust/phenotype-mcp-framework/tests/: async_server_tests.rs  transport_tests.rs  types_tests.rs
typescript/: package.json
