[workspace]
resolver = "2"
members = [
    "phenotype-mcp-core",
    "phenotype-mcp-framework",
    "phenotype-mcp-asset",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/McpKit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
