[package]
name = "phenotype-mcp-core"
version = "0.2.0"
edition = "2021"
description = "Core MCP (Model Context Protocol) utilities and patterns"
authors = ["Phenotype Team"]
license = "MIT"
repository = "https://github.com/kooshapari/Phenotype"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP/server
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.5", features = ["server", "http1"] }
http-body = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2.0"
futures = "0.3"
bytes = "1.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["test-util", "macros"] }
mockall = "0.13"
similar = "2.6"