[package]
name = "phenotype-mcp-framework"
version = "0.2.0"
edition = "2021"
description = "MCP server framework with shared protocol types and JSON-RPC handling"
authors = ["Phenotype Developers <dev@phenotype.dev>"]
license = "MIT"
repository = "https://github.com/phenotype-org/phenotype"
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.37", features = ["test-util", "macros"] }
